# trimmargin

./: .gitignore  README.md  pyproject.toml
src/trimmargin/: __init__.py  __main__.py  cli.py  core.py  py.typed
tests/: test_cli.py  test_core.py
