[build-system]
requires = ["uv_build>=0.8.7,<0.9.0"]
build-backend = "uv_build"

[project]
name = "trimmargin"
version = "0.6.0"
description = "Kotlin-style trimMargin utilities for Python, with a tiny CLI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sash Sinha", email = "sashsinha1@gmail.com" }]
keywords = ["text", "strings", "indentation", "kotlin", "trimMargin", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/sashsinha/trimmargin"
Issues = "https://github.com/sashsinha/trimmargin/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]

[project.scripts]
trimmargin = "trimmargin.cli:main"

[tool.ruff]
line-length = 80
target-version = "py310"
indent-width = 2

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "Q"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
docstring-quotes = "double"
multiline-quotes = "double"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
strict = true
warn_unused_configs = true
show_error_codes = true
pretty = true
